fixed z-index bug

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
 .App {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 * {
