--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100vh;
     background-color: var(--background-color);
-    z-index: -5;
+    /* z-index: -5; */
 }
 
 .main-container {
@@ -26,6 +26,7 @@
     border-radius: 5vw;
     padding: 1vw;
     color: white;
+    z-index: 2;
 }
 
 .main-container > h2 {
@@ -105,31 +106,33 @@
     height: 22vw;
     left: 1.1vw;
     bottom: 2vw;
+    z-index: 3;
 }
 
 #circle-2 {
     height: 8.5vw;
     top: 4.4vw;
     left: 22vw;
+    z-index: 3;
 }
 
 #circle-3 {
     height: 19vw;
     top: 3.5vw;
     right: 13.6vw;
-    z-index: -1;
+    z-index: 1;
 }
 
 #circle-4 {
     height: 15vw;
     bottom: 0vw;
     right: 11vw;
-    z-index: -1;
+    z-index: 1;
 }
 
 #circle-5 {
     height: 13vw;
     bottom: 2.5vw;
     right: 37vw;
-    z-index: -1;
+    z-index: 1;
 }
